--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-scripts": "5.0.1",
+    "react-scrollspy": "^3.4.3",
     "swiper": "^11.0.7",
     "web-vitals": "^2.1.4"
   },
